Bug 315383 - mpris volume/play status not in sync with app in kmix applet
Summary: mpris volume/play status not in sync with app in kmix applet
Status: RESOLVED FIXED
Alias: None
Product: kmix
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Esken
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-18 13:35 UTC by rockonthemoonfm
Modified: 2013-12-20 10:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments
Query volume at end of addMprisControl(). (604 bytes, patch)
2013-04-13 18:39 UTC, Alexandr Akulich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rockonthemoonfm 2013-02-18 13:35:45 UTC
when I play a song in amarok, volume in kmix applet is set to 0 and instead of pause button I have play. anyway, everything works as expected when interacting with it.
using phonon-vlc, no pulseaudio installed, front-speakers as output.
with pulseaudio installed, this bug is not present.
ask for more infos, please.
thanks

Reproducible: Always
Comment 1 Alexandr Akulich 2013-04-13 18:39:20 UTC
Created attachment 78869 [details]
Query volume at end of addMprisControl().

As I tested, this patch fixes issue.
Comment 2 Rohan Garg 2013-04-24 11:36:51 UTC
Git commit d136dfc9cac3255d13c191ca95bd8f90e003eb47 by Rohan Garg, on behalf of Alexandr Akulich.
Committed on 24/04/2013 at 13:33.
Pushed by garg into branch 'master'.

KMix: Fix initial volume for MPRIS2.

REVIEW: 110044

M  +1    -1    backends/mixer_mpris2.cpp

http://commits.kde.org/kmix/d136dfc9cac3255d13c191ca95bd8f90e003eb47
Comment 3 Rohan Garg 2013-04-24 11:40:26 UTC
Git commit 0247b50cffa6962e1863316b855c48b290103b45 by Rohan Garg, on behalf of Alexandr Akulich.
Committed on 24/04/2013 at 13:33.
Pushed by garg into branch 'KDE/4.10'.

KMix: Fix initial volume for MPRIS2.

REVIEW: 110044

M  +1    -1    backends/mixer_mpris2.cpp

http://commits.kde.org/kmix/0247b50cffa6962e1863316b855c48b290103b45
Comment 4 Christian Esken 2013-12-18 21:26:16 UTC
It looks like this bugfix is very very evil. As far as I understand, the  unobtrusive line mad->playerIfc->property("Volume")  effectively does a synchronous DBUS call. But "Synchronous DBUS calls are evil" (tm). See bug 317926 for a possible massive impact.
Comment 5 Christian Esken 2013-12-20 10:24:20 UTC
Git commit 0f7a603e1d327f76dbd6a62d08315b1956794d42 by Christian Esken.
Committed on 20/12/2013 at 10:17.
Pushed by esken into branch 'master'.

Configuration menu is now using Tabs to provide a more standard,
  convenient and pleasing layout
 Sound Menu: Play button reflects playback status and shows either
  "Play" or "Pause"
 Bugfixes and Features (CCBUGS, as most bugs are already closed). Hint: Some
bugs might have actually been alreay fixed ibn KDE4.11 or KDE4.12.

Bug ID	Severity	Summary
Related: bug 317926, bug 20, bug 299477, bug 256854, bug 304144, bug 296951, bug 303608, bug 214854, bug 319600
applet
volume control
position.

M  +9    -5    CMakeLists.txt
M  +41   -20   ChangeLog
M  +5    -1    apps/KMixApp.cpp
M  +167  -238  apps/kmix.cpp
M  +8    -13   apps/kmix.h
M  +3    -0    apps/kmixctrl.cpp
M  +3    -0    apps/kmixd.cpp
M  +18   -12   backends/mixer_backend.cpp
M  +1    -0    backends/mixer_backend.h
M  +229  -150  backends/mixer_mpris2.cpp
M  +23   -6    backends/mixer_mpris2.h
M  +8    -2    backends/mixer_oss.cpp
M  +1    -1    backends/mixer_pulse.cpp
M  +9    -9    core/ControlManager.cpp
M  +102  -15   core/GlobalConfig.cpp
M  +105  -47   core/GlobalConfig.h
M  +65   -31   core/kmixdevicemanager.cpp
M  +9    -4    core/mixdevice.cpp
M  +4    -12   core/mixdevice.h
M  +6    -4    core/mixer.cpp
M  +16   -10   core/mixertoolbox.cpp
M  +1    -1    core/version.h
M  +17   -3    core/volume.cpp
M  +9    -8    core/volume.h
M  +19   -6    gui/dialogchoosebackends.cpp
M  +1    -1    gui/dialogchoosebackends.h
M  +9    -2    gui/dialogviewconfiguration.cpp
M  +37   -10   gui/guiprofile.cpp
M  +27   -24   gui/guiprofile.h
M  +93   -118  gui/kmixdockwidget.cpp
M  +3    -4    gui/kmixdockwidget.h
M  +13   -11   gui/kmixerwidget.cpp
M  +296  -91   gui/kmixprefdlg.cpp
M  +82   -32   gui/kmixprefdlg.h
M  +87   -38   gui/mdwslider.cpp
M  +4    -2    gui/mdwslider.h
M  +69   -42   gui/viewbase.cpp
M  +1    -0    gui/viewbase.h
M  +25   -30   gui/viewdockareapopup.cpp
M  +1    -1    gui/viewdockareapopup.h
M  +4    -4    gui/viewsliders.cpp
M  +1    -1    gui/volumesliderextradata.h

http://commits.kde.org/kmix/0f7a603e1d327f76dbd6a62d08315b1956794d42