KMix: Fix initial volume for MPRIS2.

REVIEW: 110044
BUG: 315383